<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="main_text_first" translatable="false">"CALLER"</string>
    <string name="main_text_second" translatable="false">"ID"</string>
    <string name="fbapp_id" translatable="false">"0000000"</string>
    <string name="fbapp_name" translatable="false">"Caller ID"</string>
    <string name="app_name" translatable="false">Caller Color</string>
    <string name="du_ads_app_id" translatable="false">00000</string>
    <string name="push_tools_block_call">"Blocked calls."</string>
    <string name="push_tools_ring_one">"Missed a call."</string>
    <string name="push_tools_missed">"Missed calls."</string>
    <string name="push_tools_missed_count">"You missed %1$d calls"</string>
    <string name="push_tools_not_in_contact">"You got a call from a stranger!"</string>
    <string name="push_tools_reject">"You rejected a call !!!"</string>
    <string name="push_tools_content">Check details.</string>
    <string name="push_tools_call_flash_toast">"Try a new Call Flash Show theme!"</string>
    <string name="push_tools_message">"You have &lt;font color=&quot;#FF0084&quot;&gt;%1$s&lt;/font&gt; unread messages !!!"</string>
    <string name="Roboto_Thin" translatable="false">sans-serif-thin</string>
    <string name="Roboto_Light" translatable="false">sans-serif-light</string>
    <string name="Roboto_Regular" translatable="false">sans-serif</string>
    <string name="Roboto_Medium" translatable="false">sans-serif-medium</string>
    <string name="text_call_flash_exit_dialog_title">Enable Caller Show</string>
    <string name="call_flash_intro_title">"The following features are loved by most users, have a try!"</string>
    <string name="call_flash_intro_set">"Call Flash"</string>
    <string name="call_flash_intro_reject">"No, thanks!"</string>
    <string name="no_results">No results</string>
    <string name="ok_string">"OK"</string>
    <string name="no_string">"Cancel"</string>
    <string name="dialog_ok_delete_block_log">"Clear all the blocked history?"</string>
    <string name="dialog_ok_delete_block_log_title">"Clear the blocked history?"</string>
    <string name="quithint">"Press back again to quit"</string>
    <string name="grant_permission">"Grant the permission"</string>
    <string name="popup_tips1">"Display the floating window."</string>
    <string name="popup_tips3">"Turn the toggle of floating window on"</string>
    <string name="main_menu_block">@string/phone_detail_block</string>
    <string name="main_menu_settings">@string/setting_title</string>
    <string name="main_menu_about">@string/about_title</string>
    <string name="setting_title">"Settings"</string>
    <string name="setting_language">"Language"</string>
    <string name="setting_lauage_dialog_title">"Choose Language"</string>
    <string name="block_log_query_log_failed">"Query Failed"</string>
    <string name="block_list_title">"View Spam&#160;&#038;&#160;Block list"</string>
    <string name="block_list_mine">"Call Block list"</string>
    <string name="block_list_common">"Common Spammers"</string>
    <string name="block_list_empty">No records</string>
    <string name="block_setting_title">"Block Settings"</string>
    <string name="block_setting_name">"Block"</string>
    <string name="block_setting_hide_block">"Block Hidden Numbers"</string>
    <string name="block_setting_hide_block_desc">"Block all unknown calls"</string>
    <string name="block_setting_stranger_block">"Numbers not on your contacts"</string>
    <string name="block_setting_block_method">"Block Method"</string>
    <string name="block_setting_block_method_auto">"Reject Automatically"</string>
    <string name="block_setting_block_method_silence">"Keep Silence"</string>
    <string name="block_setting_do_not_diturb">"Do Not Disturb"</string>
    <string name="block_setting_do_not_diturb_time">"30 minutes"</string>
    <string name="block_setting_pop_dialog">"Incoming call Popup dialog"</string>
    <string name="block_setting_remind_missed_calls">"Remind me of the missed calls"</string>
    <string name="block_setting_floating_in_contacts">"Contacts on my phone"</string>
    <string name="block_setting_floating_in_stranger">"Unknown Calls"</string>
    <string name="block_setting_floating_out_call">"Dial a unknown call"</string>
    <string name="block_setting_call_flash">"Screen Flash for Calls"</string>
    <string name="block_setting_call_id">"Caller ID"</string>
    <string name="external_input_title">"Add"</string>
    <string name="external_input_number_hint">"Phone Number(required)"</string>
    <string name="external_input_name_hint">"Name"</string>
    <string name="external_input_added_completed">"The number has been added to your blocklist"</string>
    <string name="external_input_enter_number_long">"The phone number you dialed is out of range."</string>
    <string name="external_input_enter_number_short">"The phone number you dialed is too short."</string>
    <string name="add_number_exist">"This number is already in the blockList"</string>
    <string name="add_number_as_spam">"Report a spam"</string>
    <string name="from_contacts_title">"From contacts"</string>
    <string name="from_contacts_quick_filtering">"Quick search"</string>
    <string name="from_contacts_read_failed">"Failed to read the contacts!"</string>
    <string name="from_call_log_title">"From call history"</string>
    <string name="from_call_log_read_failed">"Failed to read the call history!"</string>
    <string name="country_list_title">"Please select your country"</string>
    <string name="country_list_name_hint">"Country name or code&#8230;"</string>
    <string name="call_coming_back">"Call back"</string>
    <string name="call_coming_detail">"Details"</string>
    <string name="about_title">"About us"</string>
    <string name="about_product_intro">"Real Phone Call Dialer&#160;&#038;&#160;Blocker."</string>
    <string name="about_product_version">%s Version:"</string>
    <string name="about_rote_gp">"Rate app"</string>
    <string name="about_like_facebook">"Like us on Facebook"</string>
    <string name="failed_backup">"Backup failed"</string>
    <string name="share_to_facebook">"Share on Facebook"</string>
    <string name="about_privacy">"Privacy Policy"</string>
    <string name="about_term">"Terms of Use"</string>
    <string name="txt_announcement">"Announcement"</string>
    <string name="share_text">"%1$s can block unwanted calls and know who is calling. Have a try! Get it on: %2$s"</string>
    <string name="rate_dialog_title">@string/app_name</string>
    <string name="rate_dialog_message">"Do you like Caller ID? \nWould you please leave us your rating?"</string>
    <string name="rate_dialog_cancel">"Later"</string>
    <string name="rate_dialog_negative_title">"Feedback"</string>
    <string name="rate_dialog_nagative_desc">"Report your issues/suggestions here, 200 words at most."</string>
    <string name="rate_dialog_nagative_send">"Send"</string>
    <string name="rate_dialog_nagative_toast">"Please enter your suggestions!"</string>
    <string name="rate_dialog_send_success_toast">"Feedback is already sent, thanks!"</string>
    <string name="rate_dialog_msg_illegal">"The words you inputted contain invalid characters!"</string>
    <string name="device_time_minutes">"%1$d min(s) ago"</string>
    <string name="device_time_hour">"%1$d hours ago"</string>
    <string name="device_time_one_hour">"1 hour ago"</string>
    <string name="device_time_day">"%1$d days ago"</string>
    <string name="device_time_one_day">"yesterday"</string>
    <string name="lanuage_item_auto">Auto</string>
    <string name="time_s">"%1$ds"</string>
    <string name="time_m">"%1$dm:%2$ds"</string>
    <string name="time_h">"%1$dh:%2$dm:%3$ds"</string>
    <string name="skip_splash">Skip</string>
    <string name="splash_more">MORE</string>
    <string name="call_log_menu_all_call">"All"</string>
    <string name="call_log_menu_discerned">"Identified"</string>
    <string name="call_log_menu_incoming">"Incoming"</string>
    <string name="call_log_menu_refused">"Rejected"</string>
    <string name="call_log_menu_outgoing">"Outgoing"</string>
    <string name="call_log_menu_missed">"Missed"</string>
    <string name="call_log_menu_blocked">"Blocked"</string>
    <string name="call_log_menu_scan_shrink">"Shrink"</string>
    <string name="call_log_contact">"Contacts"</string>
    <string name="call_log_hide_number">"Hidden number"</string>
    <string name="call_log_date_sunday">"Sunday"</string>
    <string name="call_log_date_saturday">"Saturday"</string>
    <string name="call_log_date_friday">"Friday"</string>
    <string name="call_log_date_thursday">"Thursday"</string>
    <string name="call_log_date_wednesday">"Wednesday"</string>
    <string name="call_log_date_tuesday">"Tuesday"</string>
    <string name="call_log_date_monday">"Monday"</string>
    <string name="call_log_date_today">"Today"</string>
    <string name="call_log_no_block_call">"No blocked call"</string>
    <string name="call_log_no_missed_call">"No missed call"</string>
    <string name="call_log_crank_call_count_text">"Smart Blocker for Spam Calls"</string>
    <string name="call_log_open_block_text">"Enable Smart Blocker"</string>
    <string name="call_log_enable">"Enable"</string>
    <string name="call_log_no_calllog">"No call log"</string>
    <string name="phone_detail_unblock">Unblock</string>
    <string name="phone_detail_block">Block</string>
    <string name="phone_detail_call_log">View call history</string>
    <string name="phone_detail_phone_save">Save</string>
    <string name="phone_detail_phone_edit">Edit</string>
    <string name="phone_detail_phone_Tag">Tag</string>
    <string name="phone_detail_call_log_access_failure">Canceled</string>
    <string name="phone_detail_number_type_mobile">Mobile</string>
    <string name="phone_detail_number_type_home">Home</string>
    <string name="phone_detail_number_type_company">Work</string>
    <string name="phone_detail_lastest_call_log">Latest call: </string>
    <string name="phone_detail_no_call_log">"No call history"</string>
    <string name="phone_detail_block_dialog_content">You will no longer receive calls from this number</string>
    <string name="phone_detail_block_dialog_content_unblock">"This number will no longer be blocked and identified as spam."</string>
    <string name="phone_detail_block_dialog_title">"Are you sure to block this number?"</string>
    <string name="phone_detail_block_dialog_title2">"Are you sure to unblock this number?"</string>
    <string name="phone_detail_have_no_tag">"This number has been added to the blocklist"</string>
    <string name="phone_detail_add_tag">Add Tag</string>
    <string name="phone_detail_add_name">Add name</string>
    <string name="phone_detail_no_name">No name</string>
    <string name="phone_detail_add_lion_name_tip">Edit for a better name</string>
    <string name="phone_detail_add_lion_name_dialog_person">Person</string>
    <string name="phone_detail_add_lion_name_dialog_company">Business</string>
    <string name="phone_detail_add_lion_name_update_tip1">Not &lt;font color=&quot;#FF0084&quot;&gt;%1$s&lt;/font&gt;?</string>
    <string name="phone_detail_add_lion_name_update_tip2">Tap to enter a better name.</string>
    <string name="call_flash_album_title">Choose a Pic or GIF</string>
    <string name="call_flash_album_online">Online</string>
    <string name="call_flash_album_local">Local</string>
    <string name="call_flash_album_gallery">Gallery</string>
    <string name="call_flash_album_gallery_desc_1">Choose a picture</string>
    <string name="about_email_us">"Email us"</string>
    <string name="about_send_apk">Share the App with friends</string>
    <string name="permission_welcome">"欢迎"</string>
    <string name="permission_des">第一次启动需要先进行一些设置，点击下方按钮开始设置</string>
    <string name="permission_get_permission">授予权限</string>
</resources>