<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <blocker.call.wallpaper.screen.caller.ringtones.callercolor.view.ActionBar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        app:title="@string/about_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:orientation="vertical">

        <blocker.call.wallpaper.screen.caller.ringtones.callercolor.view.FontIconView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:text="@string/icon_his"
            android:textColor="@color/white"
            android:textSize="48dp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_launcher" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/about_product_intro"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/about_product_version"
                android:textColor="@color/main_page_text_color1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.0"
                android:textColor="@color/main_page_text_color1"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:background="@color/speed_boost_footer_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/tv_rote_gp"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/about_rote_gp"
                android:textColor="@color/wifi_connect_wifi_title_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_like_us_facebook"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/about_like_facebook"
                android:textColor="@color/wifi_connect_wifi_title_color"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_send_apk_to_friends"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/about_send_apk"
                android:textColor="@color/wifi_connect_wifi_title_color"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/about_privacy"
                android:textColor="@color/wifi_connect_wifi_title_color"
                android:textSize="14sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_emailus"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/about_email_us"
                android:textColor="@color/wifi_connect_wifi_title_color"
                android:textSize="14sp"
                android:visibility="visible" />


            <TextView
                android:id="@+id/tv_term_of_use"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/about_term"
                android:textColor="@color/wifi_connect_wifi_title_color"
                android:textSize="14sp"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/speed_boost_footer_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/share_on_facebook"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:background="@drawable/share_background"
            android:gravity="center"
            android:text="@string/share_to_facebook"
            android:textColor="@color/whitesmoke"
            android:textSize="16sp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text=""
            android:textColor="@color/about_share_color"
            android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>
