<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="@dimen/dp16"
    android:layout_marginStart="@dimen/dp16"
    android:background="@drawable/app_dialog_litter_corners_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp6"
        android:paddingEnd="@dimen/dp10"
        android:paddingStart="@dimen/dp10"
        android:text="@string/rate_dialog_negative_title"
        android:textColor="@color/color_DE000000"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="@dimen/dp6"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp6"
        android:background="@color/gray" />

    <EditText
        android:id="@+id/edt_suggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start|top"
        android:hint="@string/rate_dialog_nagative_desc"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLength="200"
        android:padding="@dimen/dp10"
        android:textColor="@color/color_DE000000"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="@dimen/dp6"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp6"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp36"
        android:layout_marginBottom="@dimen/dp6">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp8"
            android:layout_marginRight="@dimen/dp8"
            android:gravity="center"
            android:paddingEnd="@dimen/dp10"
            android:paddingStart="@dimen/dp10"
            android:text="@string/rate_dialog_nagative_send"
            android:textColor="@color/color_FF0084FF"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>