<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_request_permission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp36"
            android:text="@string/permission_welcome"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_marginLeft="@dimen/dp16"
            android:layout_marginRight="@dimen/dp16"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:gravity="center_horizontal"
            android:text="@string/permission_des"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_request_permission"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginBottom="@dimen/dp24"
            android:layout_marginLeft="@dimen/dp72"
            android:layout_marginRight="@dimen/dp72"
            android:layout_marginTop="@dimen/dp36"
            android:background="@drawable/shape_shadow_round30_green"
            android:gravity="center"
            android:text="@string/permission_get_permission"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_show_permission"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <blocker.call.wallpaper.screen.caller.ringtones.callercolor.view.ActionBar
            android:id="@+id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            app:title="@string/permission_get_permission" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_permission"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/actionbar"
            android:layout_marginTop="@dimen/dp4"
            android:scrollbars="none" />
    </RelativeLayout>

</RelativeLayout>