<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/app_dialog_litter_corners_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/like" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/wifi_connect_wifi_title_color"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#c4c8d2" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lineSpacingExtra="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:text="@string/rate_dialog_message"
        android:textColor="@color/wifi_connect_detail_button_color"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/stars"
        android:visibility="gone"/>

    <RatingBar
        android:id="@+id/rb_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:progress="0"
        android:rating="5.0"
        android:minHeight="25dp"
        android:progressDrawable="@drawable/ratingbar_back"/>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:indeterminateDrawable="@drawable/dialog_progress_circle"
        android:paddingBottom="6dp"
        android:paddingTop="2dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@color/total_background_gray_color"
            android:gravity="center"
            android:text="@string/rate_dialog_cancel"
            android:textColor="@color/wifi_connect_detail_button_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@color/color_FF99A2B0"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/ok_string"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
